--- a/index.html
+++ b/index.html
@@ -184,13 +184,14 @@
                       <th class="unidade-texto">Unidade</th>
                       <th>Fi</th>
                     </tr>
+                    <tr><th colspan="2" style="padding: 0px; background-color: #80c888;">Linhas incompletas serão ignoradas</th></tr>
                     <tr>
                       <td>
                         <input
                           type="number"
                           class="centered-input fi-input"
                           id="cell-0"
-                          placeholder="0"
+                          placeholder="..."
                         />
                       </td>
                       <td>
@@ -198,7 +199,7 @@
                           type="number"
                           class="centered-input fi-input fi-min"
                           id="cell-1"
-                          placeholder="1"
+                          placeholder="..."
                           min="1"
                         />
                       </td>
