--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                           type="number"
                           class="centered-input class-input"
                           id="class-cell-3"
-                          placeholder="1"
+                          placeholder="..."
                         />
                       </td>
                     </tr>
