--- a/index.html
+++ b/index.html
@@ -20,20 +20,20 @@
           <!-- Pagina decisao entre discreto e classes -->
           <div class="page active" id="decisao">
             <div class="card" style="margin-top: 10%; min-height: 0px;">
-              <h2 style="text-align: center;">Qual agrupamento deseja utilizar?</h2>
+              <h2 style="text-align: center; margin-bottom: 20px;">Qual agrupamento deseja utilizar?</h2>
               <div class="mode-buttons">
                 <button class="btn-primary" data-page="discreto">Agrupamento Discreto</button>
-                <button class="btn-primary" data-component="classes">Agrupamento por Classes</button>
+                <button class="btn-primary" data-component="classes" style="background-color: #80c888;">Agrupamento por Classes</button>
               </div>
             </div>
           </div>
           <!-- Pagina discretos -->
           <div class="page" id="discreto">
             <div class="card"  style="margin-top: 10%; min-height: 0px;">
-              <h2 class="" style="text-align: center;">Como deseja inserir os dados?</h2>
+              <h2 class="" style="text-align: center; margin-bottom: 20px;">Como deseja inserir os dados?</h2>
               <div class="mode-buttons">
                 <button class="btn-primary" data-component="tabela">Digitar Dados</button>
-                <button class="btn-primary" data-component="fi">Tabela de Dados</button>
+                <button class="btn-primary" data-component="fi" style="background-color: #1e7d92;">Tabela de Dados</button>
               </div>
             </div>
           </div>
@@ -149,6 +149,17 @@
                     >
                       Remover Linha -
                     </button>
+                    <!-- <button
+                      id="apagar-tabela-classes"
+                      class="classes component btn-secondary"
+                      style="
+                        background-color: #6c251d;
+                        color: white;
+                        font-weight: 800;
+                      "
+                    >
+                      Apagar Tabela
+                    </button> -->
                   </div>
                 </div>
 
@@ -172,7 +183,8 @@
                   <div class="task-container">
                     <div class="task" data="media">Média</div>
                     <div class="task" data="mediana">Mediana</div>
-                    <div class="task" data="moda">Moda Bruta</div>
+                    <div class="task" data="moda">Moda</div>
+                    <div class="task" data="moda-bruta">Moda Bruta</div>
                     <div class="task" data="moda-czuber">Moda Czuber</div>
                     <div class="task" data="variancia">Variância</div>
                     <div class="task" data="desvio">Desvio Padrão</div>
@@ -279,9 +291,9 @@
                       <td>
                         <input
                           type="number"
-                          class="centered-input class-input"
-                          id="class-cell-3"
-                          placeholder="..."
+                          class="centered-input class-input class-min"
+                          id="class-cell-2"
+                          placeholder="1"
                         />
                       </td>
                     </tr>
@@ -303,10 +315,14 @@
                         <span id="resultado-media">—</span>
                       </div>
                       <div class="result-item">
-                        <span>Moda Bruta: </span>
+                        <span>Moda: </span>
                         <span id="resultado-moda">—</span>
                       </div>
-                      <div class="classes component result-item">
+                      <div class="result-item">
+                        <span>Moda Bruta: </span>
+                        <span id="resultado-moda-bruta">—</span>
+                      </div>
+                      <div class="result-item">
                         <span>Moda de Czuber: </span>
                         <span id="resultado-moda-czuber">—</span>
                       </div>
@@ -340,7 +356,7 @@
                   </div>
                 </div>
                 <div class="right-column">
-                  <div class="card">
+                  <div class="card component fi tabela">
                     <h3>Gráficos</h3>
                     <div class="chart-container">
                       <canvas id="myChart"></canvas>
