Graficos para classes

--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
                   </div>
                 </div>
                 <div class="right-column">
-                  <div class="card component fi tabela">
+                  <div class="card">
                     <h3>Gráficos</h3>
                     <div class="chart-container">
                       <canvas id="myChart"></canvas>
