--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
               <h2 style="text-align: center; margin-bottom: 20px;">Qual agrupamento deseja utilizar?</h2>
               <div class="mode-buttons">
                 <button class="btn-primary" data-page="discreto">Agrupamento Discreto</button>
-                <button class="btn-primary" data-component="classes" style="background-color: #80c888;">Agrupamento por Classes</button>
+                <button class="btn-primary" data-component="classes" style="background-color: #80c888;">Agrupamento de Classes</button>
               </div>
             </div>
           </div>
