--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                     <div class="task" data="mediana">Mediana</div>
                     <div class="task" data="moda">Moda</div>
                     <div class="task" data="moda-bruta">Moda Bruta</div>
-                    <div class="task" data="moda-czuber">Moda Czuber</div>
+                    <div class="task" data="moda-czuber">Moda de Czuber</div>
                     <div class="task" data="variancia">Variância</div>
                     <div class="task" data="desvio">Desvio Padrão</div>
                     <div class="task" data="coeficiente">
