Ux melhorada de novo

--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
                       <td>
                         <input
                           type="number"
-                          class="centered-input class-input"
+                          class="centered-input class-input lils"
                           id="class-cell-0"
                           placeholder="..."
                         />
@@ -283,7 +283,7 @@
                       <td>
                         <input
                           type="number"
-                          class="centered-input class-input"
+                          class="centered-input class-input lils"
                           id="class-cell-1"
                           placeholder="..."
                         />
