--- a/index.html
+++ b/index.html
@@ -149,17 +149,17 @@
                     >
                       Remover Linha -
                     </button>
-                    <!-- <button
+                    <button
                       id="apagar-tabela-classes"
                       class="classes component btn-secondary"
                       style="
-                        background-color: #6c251d;
+                        background-color: #3e688f;
                         color: white;
                         font-weight: 800;
                       "
                     >
                       Apagar Tabela
-                    </button> -->
+                    </button>
                   </div>
                 </div>
 
