apagar tabela fi

--- a/index.html
+++ b/index.html
@@ -160,6 +160,17 @@
                     >
                       Apagar Tabela
                     </button>
+                    <button
+                      id="apagar-tabela-fi"
+                      class="fi component btn-secondary"
+                      style="
+                        background-color: #3e688f;
+                        color: white;
+                        font-weight: 800;
+                      "
+                    >
+                      Apagar Tabela
+                    </button>
                   </div>
                 </div>
 
